Fixed an issue in the chnage password route where Json wasn't properly sent. Fixed a few visual spacing issues.

--- a/frontend/src/ConfirmationCodePage.scss
+++ b/frontend/src/ConfirmationCodePage.scss
@@ -23,5 +23,5 @@
 .ccp-actions {
   display: flex;
   justify-content: center;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
 }
